<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GravityBox</string>
    <string name="battery_style_title">Battery indicator style</string>
    <string name="battery_style_stock">Stock battery indicator</string>
    <string name="battery_style_circle">Circle battery</string>
    <string name="battery_style_circle_percent">Circle battery with percentage</string>
    <string name="battery_style_kitkat">KitKat battery</string>
    <string name="battery_style_kitkat_percent">KitKat battery with percentage</string>
    <string name="battery_style_percent">Battery percent text</string>
    <string name="battery_style_none">None</string>
    <string name="vol_music_controls_title">Volume keys skip track</string>
    <string name="vol_music_controls_summary">Skip tracks on volume keys long-press while screen is off</string>
    <string name="low_battery_warning_policy_title">Low battery warning</string>
    <string name="low_battery_warning_full">Pop-up and sound</string>
    <string name="low_battery_warning_popup">Pop-up only</string>
    <string name="low_battery_warning_sound">Sound only</string>
    <string name="low_battery_warning_off">Off</string>
    <string name="reboot_required">Change will be applied after reboot</string>
    <string name="signal_icon_autohide_title">Auto-hide signal icons</string>
    <string name="signal_icon_autohide_summary">Auto-hides signal icons for selected SIM slots when SIM card is not inserted, disables \"SIM not inserted\" notifications</string>
    <string name="sim_slot_1">Auto-hide SIM Slot 1</string>
    <string name="sim_slot_2">Auto-hide SIM Slot 2</string>
    <string name="sim_disable_notifications">Disable notifications</string>
    <string name="sim_disable_notifications_summary">\"SIM not inserted\" notifications disabled</string>
    <string name="poweroff_advanced_title">Advanced reboot menu</string>
    <string name="poweroff_advanced_summary">Enables advanced reboot menu with options to reboot to recovery</string>
    <string name="poweroff_recovery">Recovery</string>
    <string name="poweroff_bootloader">Bootloader</string>
    <string name="vol_key_cursor_control_title">Volume key cursor control</string>
    <string name="vol_key_cursor_control_summary">Controls cursor using volume keys in text fields</string>
    <string name="vol_key_cursor_control_off">Disabled</string>
    <string name="vol_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="vol_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="recents_clear_all_title">Clear all recent tasks</string>
    <string name="fix_datetime_crash_title">Fix Date&amp;Time settings crash</string>
    <string name="fix_datetime_crash_summary">Enable in case you experience crash while accessing Date&amp;Time settings (requires reboot)</string>
    <string name="fix_caller_id_phone_title">Fix caller ID for phone</string>
    <string name="fix_caller_id_phone_summary">Enable in case your contact is not matched when receiving call (requires reboot)</string>
    <string name="fix_caller_id_phone_alert">After reboot, you should clear and re-add your contacts for change to take effect! Use Settings / Applications / All - to clear data of Contacts provider.</string>
    <string name="fix_caller_id_mms_title">Fix caller ID for messages</string>
    <string name="fix_caller_id_mms_summary">Enable in case you experience splitted conversation threads for the same contact (requires reboot)</string>
    <string name="fix_caller_id_mms_alert">After reboot, you should delete all splitted threads in messaging app for change to take effect!</string>
    <string name="fix_calendar_title">Fix calendar app</string>
    <string name="fix_calendar_summary">Enable in case you experience periodic self-turning on of the screen (requires reboot)</string>
    <string name="important">Important</string>
    <string name="caller_fullscreen_photo_title">Fullscreen caller photo</string>
    <string name="caller_fullscreen_photo_summary">Displays fullscreen caller photo on incoming call screen</string>
    <string name="quick_settings_sync_on">Sync on</string>
    <string name="quick_settings_sync_off">Sync off</string>
    <string name="quick_settings_wifi_ap_on">Wi-Fi AP on</string>
    <string name="quick_settings_wifi_ap_off">Wi-Fi AP off</string>
    <string name="quick_settings_torch_on">Torch on</string>
    <string name="quick_settings_torch_off">Torch off</string>
    <string name="quick_settings_torch_off_notif">Touch to turn off</string>
    <string name="quick_settings_qr_playing">Playing&#8230;</string>
    <string name="quick_settings_qr_recording">Recording&#8230;</string>
    <string name="quick_settings_qr_recorded">Recorded</string>
    <string name="quick_settings_qr_record">Long Press To Record</string>
    <string name="quick_settings_qr_recording_notif">Touch to stop recording</string>
    <string name="quick_settings_expanded_desktop_disabled">Disabled</string>
    <string name="quick_settings_expanded_desktop_normal">Normal</string>
    <string name="quick_settings_expanded_desktop_expanded">Expanded</string>
    <string name="quick_settings_stay_awake_on">Stay awake on</string>
    <string name="quick_settings_stay_awake_off">Stay awake off</string>
    <string name="quick_settings_wifi">Wi-Fi</string>
    <string name="quick_settings_wifi_off">Wi-Fi off</string>
    <string name="quick_settings_wifi_not_connected">Not connected</string>
    <string name="quick_settings_wifi_turning_on">Turning on&#8230;</string>
    <string name="quick_settings_title">Statusbar QuickSettings tiles</string>
    <string name="quick_settings_summary">Allows to show or hide QuickSettings tiles in statusbar</string>
    <string name="qs_tile_user_profile">User profile</string>
    <string name="qs_tile_airplane_mode">Airplane mode</string>
    <string name="qs_tile_battery">Battery status</string>
    <string name="qs_tile_wifi">Wi-Fi</string>
    <string name="qs_tile_wifi_alt">Wi-Fi (CM style)</string>
    <string name="qs_tile_bluetooth">Bluetooth</string>
    <string name="qs_tile_gps">GPS</string>
    <string name="qs_tile_gps_alt">GPS (CM style)</string>
    <string name="qs_tile_mobile_data">Mobile data</string>
    <string name="qs_tile_network_mode">Network mode</string>
    <string name="qs_tile_data_usage">Data usage</string>
    <string name="qs_tile_audio">Audio profiles</string>
    <string name="qs_tile_brightness">Brightness</string>
    <string name="qs_tile_screen_timeout">Screen timeout</string>
    <string name="qs_tile_autorotation">Auto rotation</string>
    <string name="qs_tile_sync">Synchronization</string>
    <string name="qs_tile_wifi_ap">Wi-Fi Access Point</string>
    <string name="qs_tile_torch">Torch</string>
    <string name="qs_tile_gravitybox">GravityBox</string>
    <string name="qs_tile_sleep">Sleep</string>
    <string name="qs_tile_quickrecord">Quick Record</string>
    <string name="qs_tile_settings">Settings</string>
    <string name="qs_tile_volume">Volume</string>
    <string name="qs_tile_expanded_desktop">Expanded desktop</string>
    <string name="qs_tile_stay_awake">Stay awake</string>
    <string name="qs_tile_screenshot">Screenshot</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="statusbar_bgcolor_title">Statusbar background color</string>
    <string name="statusbar_bgcolor_summary">Allows to set statusbar background color</string>
    <string name="fix_tts_settings_title">Fix speech settings</string>
    <string name="fix_tts_settings_summary">Unlocks voice search and text-to-speech settings in Language&amp;Input (requires reboot)</string>
    <string name="fix_dev_opts_title">Advanced developer options</string>
    <string name="fix_dev_opts_summary">Unlocks advanced developer options (requires reboot)</string>
    <string name="pref_cat_statusbar_title">Statusbar tweaks</string>
    <string name="pref_cat_statusbar_summary">Contains various statusbar tweaks</string>
    <string name="pref_cat_misc_title">Miscellaneous tweaks</string>
    <string name="pref_cat_misc_summary">Contains all other tweaks not falling into specific category</string>
    <string name="pref_cat_fixes_title">General fixes</string>
    <string name="pref_cat_fixes_summary">Contains general MTK6589 specific fixes. Use only if needed.</string>
    <string name="pref_cat_about_title">About</string>
    <string name="about_gb_summary">Coded by C3C076@XDA. Touch to visit official thread.</string>
    <string name="about_xposed_title">Xposed framework</string>
    <string name="about_xposed_summary">Coded by rovo89@XDA. Touch to visit official thread.</string>
    <string name="about_donate_title">Donate</string>
    <string name="about_donate_summary">Touch to support development by donating via PayPal</string>
    <string name="reboot_confirm">Your %s will reboot.</string>
    <string name="reboot_confirm_recovery">Your %s will reboot into recovery.</string>
    <string name="reboot_confirm_bootloader">Your %s will reboot into bootloader.</string>
    <string name="crt_off_effect_title">CRT screen off effect</string>
    <string name="crt_off_effect_summary">Enables animation that simulates old CRT off effect when turning off the screen</string>
    <string name="engineering_mode_title">Engineering mode</string>
    <string name="engineering_mode_summary">Launches Engineering mode application</string>
    <string name="dual_sim_ringer_title">Dual SIM Ringer</string>
    <string name="dual_sim_ringer_summary">Launches application that allows to set ringtone and notification sounds separately for each SIM</string>
    <string name="pref_cat_lockscreen_title">Lockscreen tweaks</string>
    <string name="pref_cat_lockscreen_summary">Contains various lockscreen tweaks</string>
    <string name="pref_cat_lockscreen_background_title">Lockscreen background</string>
    <string name="pref_lockscreen_background_title">Background style</string>
    <string name="lockscreen_bg_default">Default wallpaper</string>
    <string name="lockscreen_bg_color">Color fill</string>
    <string name="lockscreen_bg_image">Custom image</string>
    <string name="pref_lockscreen_bg_color_title">Set custom color</string>
    <string name="pref_lockscreen_bg_color_summary">Allows to set custom background color for lockscreen</string>
    <string name="pref_lockscreen_bg_image_title">Set custom image</string>
    <string name="pref_lockscreen_bg_image_summary">Allows to set custom background image for lockscreen</string>
    <string name="lockscreen_background_result_successful">Background changed</string>
    <string name="lockscreen_background_result_not_successful">Background not changed</string>
    <string name="pref_cat_lockscreen_other_title">Other</string>
    <string name="pref_lockscreen_maximize_widgets_title">Maximize widgets</string>
    <string name="pref_lockscreen_maximize_widgets_summary">When enabled, lockscreen widgets will be maximized by default</string>
    <string name="pref_cat_power_title">Power tweaks</string>
    <string name="pref_cat_power_summary">Contains various power related tweaks</string>
    <string name="pref_flashing_led_disable_title">Disable LED flashing</string>
    <string name="pref_flashing_led_disable_summary">Disables intrusive LED flashing when battery is low and not charging</string>
    <string name="pref_cat_display_title">Display tweaks</string>
    <string name="ongoing_notif_info">The list will get populated automatically for every ongoing notification that occurs.
        You can then decide whether to block ongoing notification next time it occurs. Use with caution.</string>
    <string name="ongoing_notif_reset_list">Reset list</string>
    <string name="ongoing_notif_list_empty">(list is empty)</string>
</resources>