<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:key="pref_battery_style" 
        android:title="@string/battery_style_title" 
        android:entries="@array/battery_style_entries"
        android:entryValues="@array/battery_style_values"
        android:defaultValue="1" />

    <ListPreference
        android:key="pref_low_battery_warning_policy"
        android:title="@string/low_battery_warning_policy_title"
        android:entries="@array/low_battery_warning_policy_entries"
        android:entryValues="@array/low_battery_warning_policy_values"
        android:defaultValue="3" />

    <CheckBoxPreference 
        android:key="pref_vol_music_controls"
        android:title="@string/vol_music_controls_title"
        android:summary="@string/vol_music_controls_summary"
        android:defaultValue="true" />

</PreferenceScreen>
